--- a/src/pages/Notification.css
+++ b/src/pages/Notification.css
@@ -5,7 +5,7 @@
   /* width: 100vw; */
   min-height: 100vh;
   font-family: "Poppins", sans-serif;
-  padding: 24px 16px;
+  /* padding: 24px 16px; */
   box-sizing: border-box;
   
 }
